[package]
name = "RenderingEngine"
version = "0.1.0"
authors = ["Romain Blazevic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.79", features = ["derive"]}
serde_json = "1.0.79"
sdl2 = "0.35.2"