[package]
name = "RenderingEngine"
version = "0.1.0"
authors = ["Romain Blazevic"]
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.79", features = ["derive"]}
serde_json = "1.0.79"
nannou = "0.18.1"
vek = "0.15.8"